<resources>
    <string name="app_name">Popular Movies</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="details">Details</string>
    <string name="reviews">Reviews</string>
    <string name="about">About</string>
    <string name="loading">Loading&#8230;</string>
    <string name="loading_failed">Loading Failed!</string>
    <string name="sort_order">Sort Order</string>
    <string name="favorites">Favorites</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="most_popular">Most Popular</string>
    <string name="prefs_sort_order" translatable="false">sort_order</string>
    <string name="prefs_tmdb_configuration" translatable="false">tmdb_configuration</string>
    <string name="prefs_tmdb_configuration_read_date" translatable="false">tmdb_configuration_read_data</string>
    <string name="tmdb_api_call_failure">TMDB API Call Failure: %s</string>
    <string name="release_date">Release Date:</string>
    <string name="number_of_votes">Number of Votes:</string>
    <string name="vote_average">Vote Average:</string>
    <string name="popularity">Popularity:</string>
    <string name="overview">Overview:</string>
    <string name="trailers">Trailers:</string>
    <string name="movie_id_invalid">The requested movie ID is invalid</string>
    <string name="movie_id_unknown">The requested movie is unknown</string>
    <string name="tmdb_attribution">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
    <string name="libraies_used">Libraries Used:</string>
    <string name="libraries">Butterknife\nDagger2\nGlide\nGson\nRetrofit2\nTimber</string>
    <string name="ok">OK</string>
    <string name="tmdb_logo">TMDb Logo</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="cannot_start_activity_to_view_trailer">Cannot start activity to view trailer</string>
    <string name="author">Author:</string>
    <string name="content_authority">nl.erikduisters.popularmovies</string>
    <string name="no_favorites_movies_yet">You don\'t have any favorite movies yet</string>
    <string name="no_trailers_available">No trailers available</string>
    <string name="no_reviews_available">No reviews available</string>
    <string name="share">Share</string>
    <string name="favorite_this_movie">Favorite this movie</string>
    <string name="trailer">Trailer</string>
    <string name="watch_trailer">Watch trailer</string>
</resources>
