<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/trailerImage"
        android:layout_width="320dp"
        android:layout_height="180dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/trailer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher"/>

    <!-- Setting foreground does not work on API < 23 -->
    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/trailerImage"
        app:layout_constraintEnd_toEndOf="@id/trailerImage"
        app:layout_constraintTop_toTopOf="@id/trailerImage"
        app:layout_constraintBottom_toBottomOf="@id/trailerImage"
        app:srcCompat="@drawable/scrimm"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/loading_failed"/>

    <ImageView
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_small"
        android:contentDescription="@string/watch_trailer"
        app:layout_constraintBottom_toBottomOf="@+id/trailerImage"
        app:layout_constraintEnd_toEndOf="@+id/trailerImage"
        app:layout_constraintStart_toStartOf="@+id/trailerImage"
        app:layout_constraintTop_toTopOf="@+id/trailerImage"
        app:srcCompat="@drawable/ic_play_circle_outline_black_48dp"/>
</android.support.constraint.ConstraintLayout>