<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/pageProgressGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal">

        <ProgressBar
            android:id="@+id/pageProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/pageProgressMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/contentGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="8dp"
        android:scrollbars="horizontal|vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Mad Max Fury Road"/>

            <ImageView
                android:id="@+id/poster"
                android:layout_width="185dp"
                android:layout_height="278dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/movie_poster"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"/>

            <ImageView
                android:id="@+id/favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/btn_small"
                app:layout_constraintBottom_toTopOf="@+id/releaseDateLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/poster"
                app:layout_constraintTop_toTopOf="@+id/poster"
                app:srcCompat="@drawable/vector_drawable_ic_favorite_outline"/>

            <LinearLayout
                android:id="@+id/releaseDateLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/voteAverageLayout"
                app:layout_constraintStart_toEndOf="@+id/poster"
                app:layout_constraintTop_toBottomOf="@+id/favorite"
                android:layout_marginLeft="8dp">

                <TextView
                    android:id="@+id/releaseDateLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/releaseDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginStart="24dp"
                    tools:text="14-02-2008"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/voteAverageLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/numberOfVotesLayout"
                app:layout_constraintStart_toStartOf="@+id/releaseDateLayout"
                app:layout_constraintTop_toBottomOf="@+id/releaseDateLayout">

                <TextView
                    android:id="@+id/voteAverageLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vote_average"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/voteAverage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginStart="24dp"
                    tools:text="6.4/10"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/numberOfVotesLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="@+id/releaseDateLayout"
                app:layout_constraintTop_toBottomOf="@+id/voteAverageLayout">

                <TextView
                    android:id="@+id/numberOfVotesLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/number_of_votes"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/numberOfVotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginStart="24dp"
                    tools:text="5727"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/poster"
                app:layout_constraintStart_toStartOf="@id/releaseDateLayout"
                app:layout_constraintTop_toBottomOf="@+id/numberOfVotesLayout">

                <TextView
                    android:id="@+id/popularityLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/popularity"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/popularity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginStart="24dp"
                    tools:text="599.23"/>
            </LinearLayout>

            <TextView
                android:id="@+id/overviewLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/overview"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/poster"/>

            <TextView
                android:id="@+id/overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/overviewLabel"
                app:layout_constraintTop_toBottomOf="@+id/overviewLabel"
                tools:text="Minions Stuart, Kevin and Bob are recruited by Scarlet Overkill, a super-villain who, alongside her inventor husband Herb, hatches a plot to take over the  world."/>

            <TextView
                android:id="@+id/trailersLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/trailers"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/overviewLabel"
                app:layout_constraintTop_toBottomOf="@+id/overview"/>

            <LinearLayout
                android:id="@+id/trailersProgressGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                app:layout_constraintEnd_toEndOf="@id/overview"
                app:layout_constraintStart_toStartOf="@id/overview"
                app:layout_constraintTop_toBottomOf="@+id/trailersLabel">

                <ProgressBar
                    android:id="@+id/trailersProgressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/trailersProgressMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    tools:text="Loading..."/>
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:scrollIndicators="bottom"
                android:scrollbars="horizontal"
                app:layout_constraintEnd_toEndOf="@id/overview"
                app:layout_constraintStart_toStartOf="@id/overviewLabel"
                app:layout_constraintTop_toBottomOf="@id/trailersLabel"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</FrameLayout>